# usbview

./: Dockerfile  README.md  capture.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  docker-publish.yml
static/: app.js  index.html  style.css
